--- a/api/composer.json
+++ b/api/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "alchemy/zipper",
+    "description": "A zip service to manage multiple archives from remote files.",
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "dev",
@@ -8,7 +9,7 @@
         "php": ">=7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/core": "^2.6",
+        "api-platform/core": "v2.6.3",
         "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.3",
@@ -19,11 +20,14 @@
         "ramsey/uuid-doctrine": "^1.6",
         "stof/doctrine-extensions-bundle": "^1.6",
         "symfony/asset": "5.2.*",
+        "symfony/browser-kit": "5.2.*",
         "symfony/console": "5.2.*",
+        "symfony/css-selector": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/expression-language": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/phpunit-bridge": "^5.2",
         "symfony/property-access": "5.2.*",
         "symfony/property-info": "5.2.*",
         "symfony/proxy-manager-bridge": "5.2.*",
@@ -67,7 +71,8 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "test": "rm -f var/cache/test/data.db && bin/console doctrine:schema:create -e test && ./bin/phpunit"
     },
     "conflict": {
         "symfony/symfony": "*"
