--- a/api/config/packages/api_platform.yaml
+++ b/api/config/packages/api_platform.yaml
@@ -1,4 +1,9 @@
 api_platform:
+    formats:
+        jsonld: [ 'application/ld+json', 'application/merge-patch+json' ]
+        json: [ 'application/json', 'application/merge-patch+json' ]
+        html: [ 'text/html' ]
+    version: '0.0.1'
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
     patch_formats:
