--- a/api/.env
+++ b/api/.env
@@ -22,8 +22,8 @@ APP_SECRET=22ef301ee259f4a906a4e17c7e9e0a24
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
-DATABASE_URL=sqlite:///%kernel.project_dir%/data/zippy.db
-DB_NAME=zipper
+DATA_DIR=%kernel.project_dir%/data
+DATABASE_URL=sqlite://%kernel.project_dir%/data/zippy.db
 
 RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
