--- a/api/.env.test
+++ b/api/.env.test
@@ -5,4 +5,5 @@ SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 
-DATABASE_URL=sqlite:///%kernel.project_dir%/var/cache/test/data.db
+DATA_DIR=%kernel.project_dir%/tests/data
+DATABASE_URL=sqlite:///%kernel.project_dir%/tests/data/test.db
