--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
+COMPOSE_PROJECT_NAME=zippy
+
 DOCKER_TAG=latest
 DOCKER_REGISTRY=alchemyfr
 
-ZIPPY_API_PORT=80
+ZIPPY_API_PORT=3088
 
 # Database
-DATABASE_URL=sqlite:///%kernel.project_dir%/data/zippy.db
+DATABASE_URL=sqlite:////data/zippy.db
 
 # RabbitMQ
 RABBITMQ_USER=zippy
