--- a/api/.env
+++ b/api/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=22ef301ee259f4a906a4e17c7e9e0a24
 ###< symfony/framework-bundle ###
 
@@ -22,11 +22,11 @@ APP_SECRET=22ef301ee259f4a906a4e17c7e9e0a24
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
-DATA_DIR=%kernel.project_dir%/data
-DATABASE_URL=sqlite://%kernel.project_dir%/data/zippy.db
+DATA_DIR=/data
+DATABASE_URL=sqlite:///data/zippy.db
 
 RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
 RABBITMQ_USER=zippy
 RABBITMQ_PASSWORD=change-me
-RABBITMQ_VHOST=zippy
+RABBITMQ_VHOST=/
