--- a/api/config/packages/doctrine.yaml
+++ b/api/config/packages/doctrine.yaml
@@ -2,6 +2,7 @@ doctrine:
     dbal:
         charset: utf8
         url: '%env(resolve:DATABASE_URL)%'
+        override_url: true
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
