--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ networks:
   zippy:
 
 services:
-  zippy-api-php:
+  php:
     image: ${DOCKER_REGISTRY}/zippy-api-php:$DOCKER_TAG
     build:
       context: ./api
@@ -19,11 +19,11 @@ services:
       - RABBITMQ_USER
       - RABBITMQ_PASSWORD
     volumes:
-      - zippy_vol:/srv/app/data
+      - zippy_vol:/data
     depends_on:
       - rabbitmq
 
-  zippy-api-nginx:
+  nginx:
     image: ${DOCKER_REGISTRY}/zippy-api-nginx:$DOCKER_TAG
     build:
       context: ./api
@@ -35,9 +35,9 @@ services:
     ports:
       - ${ZIPPY_API_PORT}:80
     depends_on:
-      - zippy-api-php
+      - php
 
-  zippy-worker:
+  worker:
     image: ${DOCKER_REGISTRY}/zippy-worker:$DOCKER_TAG
     build:
       context: ./api
@@ -52,7 +52,7 @@ services:
       - RABBITMQ_USER
       - RABBITMQ_PASSWORD
     volumes:
-      - zippy_vol:/srv/app/data
+      - zippy_vol:/data
 
   rabbitmq:
     image: rabbitmq:3.7.14-management
