--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ DATABASE_URL=sqlite:////data/zippy.db
 # RabbitMQ
 RABBITMQ_USER=zippy
 RABBITMQ_PASSWORD=change-me
+
+CLIENT_USERNAME=client
+CLIENT_SECRET=secret
