--- a/api/.env
+++ b/api/.env
@@ -30,3 +30,6 @@ RABBITMQ_PORT=5672
 RABBITMQ_USER=zippy
 RABBITMQ_PASSWORD=change-me
 RABBITMQ_VHOST=/
+
+CLIENT_USERNAME=client
+CLIENT_SECRET=secret
