--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -1,21 +1,22 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        users_in_memory:
+            memory:
+                users:
+                    '%env(resolve:CLIENT_USERNAME)%': { password: '%env(resolve:CLIENT_SECRET)%', roles: [ROLE_API] }
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: true
+            stateless: true
             lazy: true
             provider: users_in_memory
-
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+            guard:
+                authenticators:
+                    - App\Security\ApiClientAuthenticator
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
