--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - run:
           name: Install applications and run tests
           command: |-
-            echo "TOTO: run tests"
+            echo "TODO: run tests"
       - run:
           name: Publish Docker Image to Docker Hub
           command: |
