--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ networks:
   zippy:
 
 services:
-  php:
+  fpm:
     image: ${DOCKER_REGISTRY}/zippy-api-php:$DOCKER_TAG
     build:
       context: ./api
@@ -12,7 +12,7 @@ services:
     networks:
       zippy:
         aliases:
-          - zippy-php
+          - zippy-fpm
     environment:
       - APP_ENV
       - DATABASE_URL
@@ -35,7 +35,7 @@ services:
     ports:
       - ${ZIPPY_API_PORT}:80
     depends_on:
-      - php
+      - fpm
 
   worker:
     image: ${DOCKER_REGISTRY}/zippy-worker:$DOCKER_TAG
