add identifier generator

--- a/api/config/validator/validation.yaml
+++ b/api/config/validator/validation.yaml
@@ -1,9 +1,8 @@
 App\Api\ArchiveInput:
   properties:
     identifier:
-      - NotNull:
-          groups: [Post]
       - NotBlank:
+          allowNull: true
           groups: [Post]
     files:
       - NotNull: ~
