rename client id

--- a/api/.env
+++ b/api/.env
@@ -31,5 +31,5 @@ RABBITMQ_USER=zippy
 RABBITMQ_PASSWORD=change-me
 RABBITMQ_VHOST=/
 
-CLIENT_USERNAME=client
+CLIENT_ID=client
 CLIENT_SECRET=secret
