--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ DATABASE_URL=sqlite:////data/zippy.db
 RABBITMQ_USER=zippy
 RABBITMQ_PASSWORD=change-me
 
-CLIENT_USERNAME=client
+CLIENT_ID=client
 CLIENT_SECRET=secret
