--- a/api/.env
+++ b/api/.env
@@ -23,7 +23,7 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
 DATA_DIR=/data
-DATABASE_URL=sqlite:///data/zippy.db
+DATABASE_URL=sqlite:////data/zippy.db
 
 RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
@@ -33,3 +33,7 @@ RABBITMQ_VHOST=/
 
 CLIENT_ID=client
 CLIENT_SECRET=secret
+
+TRUSTED_PROXIES=
+
+VERIFY_SSL=true
