--- a/api/composer.json
+++ b/api/composer.json
@@ -42,6 +42,7 @@
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.18"
     },
     "config": {
         "optimize-autoloader": true,
