--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
             chmod +x ~/docker-compose
             sudo mv ~/docker-compose /usr/local/bin/docker-compose
       - setup_remote_docker:
-          version: 18.01.0-ce
+          version: 20.10.2
           docker_layer_caching: true
       - run:
           name: Install Docker client
