--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,6 +56,23 @@ services:
     volumes:
       - zippy_vol:/data
 
+  cron:
+    image: ${DOCKER_REGISTRY}/zippy-worker:$DOCKER_TAG
+    build:
+      context: ./api
+      target: zippy-worker
+    command: ['/srv/app/docker/cron/start-cron.sh']
+    networks:
+      - zippy
+    depends_on:
+      - rabbitmq
+    environment:
+      - APP_ENV
+      - DATABASE_URL
+      - RABBITMQ_USER
+      - RABBITMQ_PASSWORD
+      - VERIFY_SSL
+
   rabbitmq:
     image: rabbitmq:3.7.14-management
     hostname: rabbitmq
