--- a/infra/helm/zippy/templates/zippy-rabbitmq-pvc.yaml
+++ b/infra/helm/zippy/templates/zippy-rabbitmq-pvc.yaml
@@ -1,10 +1,10 @@
-{{- with .Values.rabbitmq }}
-{{- if and .persistence.enabled (not .persistence.existingClaim) }}
+{{- with .Values.zippy.persistence }}
+{{- if .enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   annotations:
-  name: {{ include "zippy.fullname" $ }}-data-pvc
+  name: {{ include "zippy.fullname" $ }}-rabbitmq-pvc
 spec:
   accessModes:
     - {{ .accessMode | quote }}
@@ -13,7 +13,7 @@ spec:
       storage: {{ .size | quote }}
 {{- if .storageClass }}
 {{- if (eq "-" .storageClass) }}
-  storageClassName: "standard"
+  storageClassName: ""
 {{- else }}
   storageClassName: {{ .storageClass | quote }}
 {{- end }}
