add rabbitmq - fix persitence variable declaration

--- a/infra/helm/zippy/templates/zippy-rabbitmq-pvc.yaml
+++ b/infra/helm/zippy/templates/zippy-rabbitmq-pvc.yaml
@@ -1,4 +1,4 @@
-{{- with .Values.zippy.persistence }}
+{{- with .Values.rabbitmq.persistence }}
 {{- if .enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
