--- a/infra/helm/zippy/templates/zippy-rabbitmq-pvc.yaml
+++ b/infra/helm/zippy/templates/zippy-rabbitmq-pvc.yaml
@@ -1,5 +1,5 @@
 {{- with .Values.rabbitmq.persistence }}
-{{- if .enabled }}
+{{- if and .enabled (not .existingClaim) }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
