--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,7 @@ name: Build images, test, and then push
 on: push
 
 jobs:
-  build:
+  build_publish:
     name: 'Build'
     runs-on: ubuntu-latest
     steps:
@@ -12,12 +12,6 @@ jobs:
       - name: build
         run: |
           docker-compose build
-
-  test:
-    name: 'Test'
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
       - name: Test API
         run: |
           docker-compose run --rm api composer test
@@ -30,12 +24,20 @@ jobs:
           helm template infra/helm/zippy -f infra/helm/zippy/myvalues.yaml
           helm lint infra/helm/zippy
 
-  publish:
-    name: Publish images and Helm package
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
+      - name: Login to Docker Hub
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Login to Docker Hub
+        if: github.ref == 'refs/heads/main'
+        run: |
+          docker-compose push
+
       - name: Publish Helm charts
+        if: github.ref == 'refs/heads/main'
         uses: stefanprodan/helm-gh-pages@master
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
