--- a/infra/helm/zippy/templates/rabbitmq-secret.yaml
+++ b/infra/helm/zippy/templates/rabbitmq-secret.yaml
@@ -6,7 +6,11 @@ metadata:
 stringData:
   RABBITMQ_USER: {{ .username | quote }}
   RABBITMQ_PASSWORD: {{ .password | quote }}
-  RABBITMQ_HOST: {{ .host | quote }}
+  RABBITMQ_HOST: {{ if .host -}}
+  {{- .host | quote -}}
+  {{- else -}}
+  {{- include "zippy.fullname" $ }}-rabbitmq
+  {{- end }}
   RABBITMQ_PORT: {{ .port | quote }}
   RABBITMQ_VHOST: {{ .vhost | quote }}
   RABBITMQ_SSL: {{ .ssl | quote }}
