--- a/infra/helm/zippy/templates/rabbitmq-deployment.yaml
+++ b/infra/helm/zippy/templates/rabbitmq-deployment.yaml
@@ -3,7 +3,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: rabbitmq
+  name: {{ include "zippy.fullname" $ }}-rabbitmq
 spec:
   replicas: 1
   strategy:
@@ -29,7 +29,7 @@ spec:
       hostAliases:
         - ip: "127.0.0.1"
           hostnames:
-            - "rabbitmq"
+            - {{ include "zippy.fullname" $ }}-rabbitmq
       containers:
       - name: rabbitmq
         image: rabbitmq:3.7.14-management
@@ -50,6 +50,6 @@ spec:
               key: RABBITMQ_PASSWORD
         envFrom:
         - configMapRef:
-            name: rabbitmq-config
+            name: {{ include "zippy.fullname" $ }}-rabbitmq-config
 {{- end }}
 {{- end }}
