--- a/infra/helm/zippy/templates/rabbitmq-service.yaml
+++ b/infra/helm/zippy/templates/rabbitmq-service.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: rabbitmq
+  name: {{ include "zippy.fullname" $ }}-rabbitmq
 spec:
   ports:
   - name: rabbitmq
