--- a/infra/helm/zippy/templates/ingress.yaml
+++ b/infra/helm/zippy/templates/ingress.yaml
@@ -1,5 +1,10 @@
-{{- if Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" -}}
 apiVersion: networking.k8s.io/v1
+{{- else if .Capabilities.APIVersions.Has "networking.k8s.io/v1beta1/Ingress" -}}
+apiVersion: networking.k8s.io/v1beta1
+{{- else -}}
+apiVersion: extensions/v1beta1
+{{- end }}
 kind: Ingress
 metadata:
   name: {{ include "zippy.fullname" $ }}-ingress
@@ -9,31 +14,19 @@ spec:
       http:
         paths:
           - path: /
+            {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
             pathType: Prefix
             backend:
               service:
                 name: {{ include "zippy.fullname" $ }}-api
                 port:
                   number: 80
+            {{- else }}
+            backend:
+              serviceName: {{ include "zippy.fullname" $ }}-api
+              servicePort: 80
+            {{- end }}
   tls:
     - hosts:
         - {{ required "Missing ingress.hostname" .Values.ingress.hostname }}
       secretName: {{ .Values.ingress.secretName }}
-{{- else }}
-apiVersion: networking.k8s.io/v1beta1
-kind: Ingress
-metadata:
-  name: {{ include "zippy.fullname" $ }}-ingress
-spec:
-  rules:
-  - http:
-      paths:
-      - path: /*
-        backend:
-          serviceName: {{ include "zippy.fullname" $ }}-api
-          servicePort: 80
-  tls:
-    - hosts:
-        - {{ required "Missing ingress.hostname" .Values.ingress.hostname }}
-      secretName: {{ .Values.ingress.secretName }}
-{{- end }}
