--- a/infra/helm/zippy/templates/ingress.yaml
+++ b/infra/helm/zippy/templates/ingress.yaml
@@ -14,7 +14,7 @@ spec:
       http:
         paths:
           - path: /
-            {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+            {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" }}
             pathType: Prefix
             backend:
               service:
