--- a/infra/helm/zippy/templates/zippy-data-pvc.yaml
+++ b/infra/helm/zippy/templates/zippy-data-pvc.yaml
@@ -7,7 +7,7 @@ metadata:
   name: {{ include "zippy.fullname" $ }}-data-pvc
 spec:
   accessModes:
-    - {{ .accessMode | quote }}
+    - ReadWriteMany
   resources:
     requests:
       storage: {{ .size | quote }}
