--- a/infra/helm/zippy/templates/rabbitmq-job-vhost.yaml
+++ b/infra/helm/zippy/templates/rabbitmq-job-vhost.yaml
@@ -49,6 +49,8 @@ spec:
         - name: scripts
           mountPath: /setup/job.sh
           subPath: job.sh
+        env:
+          {{- include "zippy.rabbitmqCredentials" $ | indent 10 }}
         envFrom:
         - secretRef:
             name: {{ include "zippy.fullname" $ }}-rabbitmq
