--- a/infra/helm/zippy/templates/rabbitmq-secret.yaml
+++ b/infra/helm/zippy/templates/rabbitmq-secret.yaml
@@ -4,8 +4,12 @@ kind: Secret
 metadata:
   name: {{ include "zippy.fullname" $ }}-rabbitmq
 stringData:
+  {{- if not (and .externalSecretName .externalSecretMap.username) }}
   RABBITMQ_USER: {{ .username | quote }}
+  {{- end }}
+  {{- if not (and .externalSecretName .externalSecretMap.password) }}
   RABBITMQ_PASSWORD: {{ .password | quote }}
+  {{- end }}
   RABBITMQ_HOST: {{ if .host -}}
   {{- .host | quote -}}
   {{- else -}}
