--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,7 +21,7 @@ jobs:
           curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
           chmod 700 get_helm.sh
           ./get_helm.sh
-          helm template infra/helm/zippy -f infra/helm/zippy/myvalues.yaml
+          helm template infra/helm/zippy -f bin/dev/myvalues.yaml
           helm lint infra/helm/zippy
 
       - name: Login to Docker Hub
