--- a/infra/helm/zippy/templates/api-deployment.yaml
+++ b/infra/helm/zippy/templates/api-deployment.yaml
@@ -19,7 +19,7 @@ spec:
         - name: data
           {{- if .persistence.enabled }}
           persistentVolumeClaim:
-            claimName: {{ include "zippy.fullname" $ }}-data-pvc
+            claimName: {{ .persistence.existingClaim | default (printf "%s-data-pvc" (include "zippy.fullname" $)) }}
           {{- else }}
           emptyDir: {}
           {{- end }}
