--- a/infra/helm/zippy/templates/cron-deployment.yaml
+++ b/infra/helm/zippy/templates/cron-deployment.yaml
@@ -29,6 +29,8 @@ spec:
         terminationMessagePolicy: FallbackToLogsOnError
         args:
           - /srv/app/docker/cron/start-cron.sh
+        env:
+          {{- include "zippy.rabbitmqCredentials" $ | indent 10 }}
         envFrom:
           - secretRef:
               name: {{ include "zippy.fullname" $ }}-rabbitmq
