--- a/api/composer.json
+++ b/api/composer.json
@@ -31,6 +31,7 @@
         "symfony/expression-language": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/monolog-bundle": "^3.7",
         "symfony/phpunit-bridge": "^5.2",
         "symfony/property-access": "5.2.*",
         "symfony/property-info": "5.2.*",
