--- a/api/composer.json
+++ b/api/composer.json
@@ -19,6 +19,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.8",
         "guzzlehttp/guzzle": "^7.3",
+        "lcobucci/jwt": "^4.1",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
         "ramsey/uuid-doctrine": "^1.6",
