--- a/api/docker/caching/composer.json
+++ b/api/docker/caching/composer.json
@@ -1,42 +1,51 @@
 {
+    "name": "alchemy/zipper",
+    "description": "A zip service to manage multiple archives from remote files.",
     "type": "project",
     "license": "proprietary",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": ">=7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/core": "^2.5",
-        "arthem/rabbit-bundle": "dev-master",
-        "composer/package-versions-deprecated": "^1.11",
+        "ext-json": "*",
+        "alchemy/zippy": "^1.0",
+        "api-platform/core": "v2.6.3",
+        "arthem/rabbit-bundle": "^0.2.2",
+        "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/annotations": "^1.0",
-        "doctrine/doctrine-bundle": "^2.1",
-        "doctrine/doctrine-migrations-bundle": "^3.0",
-        "doctrine/orm": "^2.7",
-        "friendsofsymfony/elastica-bundle": "^6@dev",
-        "friendsofsymfony/oauth-server-bundle": "dev-master as 1.6.99",
-        "hautelook/alice-bundle": "^2.8",
+        "doctrine/doctrine-bundle": "^2.3",
+        "doctrine/doctrine-migrations-bundle": "^3.1",
+        "doctrine/dbal": "^2.13",
+        "doctrine/orm": "^2.8",
+        "guzzlehttp/guzzle": "^7.3",
+        "lcobucci/jwt": "^4.1",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
-        "predis/predis": "^1.1",
         "ramsey/uuid-doctrine": "^1.6",
-        "snc/redis-bundle": "^3.2",
-        "stof/doctrine-extensions-bundle": "^1.4",
-        "symfony/asset": "^5.2.0",
-        "symfony/console": "^5.2.0",
-        "symfony/dotenv": "^5.2.0",
-        "symfony/expression-language": "^5.2.0",
+        "stof/doctrine-extensions-bundle": "^1.6",
+        "symfony/asset": "5.2.*",
+        "symfony/browser-kit": "5.2.*",
+        "symfony/console": "5.2.*",
+        "symfony/css-selector": "5.2.*",
+        "symfony/dotenv": "5.2.*",
+        "symfony/expression-language": "5.2.*",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "^5.2.0",
-        "symfony/property-access": "^5.2.0",
-        "symfony/property-info": "^5.2.0",
-        "symfony/security-bundle": "^5.2.0",
-        "symfony/serializer": "^5.2.0",
-        "symfony/twig-bundle": "^5.2.0",
-        "symfony/validator": "^5.2.0",
-        "symfony/yaml": "^5.2.0"
+        "symfony/framework-bundle": "5.2.*",
+        "symfony/monolog-bundle": "^3.7",
+        "symfony/phpunit-bridge": "^5.2",
+        "symfony/property-access": "5.2.*",
+        "symfony/property-info": "5.2.*",
+        "symfony/proxy-manager-bridge": "5.2.*",
+        "symfony/security-bundle": "5.2.*",
+        "symfony/serializer": "5.2.*",
+        "symfony/twig-bundle": "5.2.*",
+        "symfony/validator": "5.2.*",
+        "symfony/yaml": "5.2.*"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16"
+        "friendsofphp/php-cs-fixer": "^2.18"
     },
     "config": {
         "optimize-autoloader": true,
@@ -56,13 +65,9 @@
         }
     },
     "replace": {
-        "paragonie/random_compat": "2.*",
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php72": "*",
-        "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
+        "symfony/polyfill-php72": "*"
     },
     "scripts": {
         "auto-scripts": {
@@ -74,17 +79,16 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "test": "unset DATA_DIR DATABASE_URL && rm -f tests/data/test.db && bin/console doctrine:schema:create -e test && ./bin/phpunit"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "conflict": {
         "symfony/symfony": "*"
     },
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "^5.2.0"
+            "require": "5.2.*"
         }
     }
 }
