--- a/infra/helm/zippy/templates/ingress.yaml
+++ b/infra/helm/zippy/templates/ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Value.ingress.enabled }}
 {{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" -}}
 apiVersion: networking.k8s.io/v1
 {{- else if .Capabilities.APIVersions.Has "networking.k8s.io/v1beta1/Ingress" -}}
@@ -30,3 +31,4 @@ spec:
     - hosts:
         - {{ required "Missing ingress.hostname" .Values.ingress.hostname }}
       secretName: {{ .Values.ingress.secretName }}
+{{- end }}
