--- a/infra/helm/zippy/templates/ingress.yaml
+++ b/infra/helm/zippy/templates/ingress.yaml
@@ -1,4 +1,4 @@
-{{- if .Value.ingress.enabled }}
+{{- if .Values.ingress.enabled }}
 {{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" -}}
 apiVersion: networking.k8s.io/v1
 {{- else if .Capabilities.APIVersions.Has "networking.k8s.io/v1beta1/Ingress" -}}
