--- a/infra/helm/zippy/values.yaml
+++ b/infra/helm/zippy/values.yaml
@@ -14,6 +14,7 @@ rabbitmq:
   port: 5672
   vhost: /
   epmdPort: 55950
+  # Define erlangCookie when you need to separate clusters (ex: nUhtWhdRmqbhnEYIiwlC)
   erlangCookie: nUhtWhdRmqbhnEYIiwlC
   setupVhost: true
   externalSecretName:
