--- a/infra/helm/zippy/templates/rabbitmq-job-vhost.yaml
+++ b/infra/helm/zippy/templates/rabbitmq-job-vhost.yaml
@@ -14,6 +14,7 @@ spec:
       containers:
       - name: rabbitmq
         image: rabbitmq:3.7.14-management
+        command: ["sh", "-c"]
         args:
           - |
             #!/bin/sh
