--- a/infra/helm/zippy/templates/cron-deployment.yaml
+++ b/infra/helm/zippy/templates/cron-deployment.yaml
@@ -15,6 +15,9 @@ spec:
         app: zippy
         tier: cron
     spec:
+      {{- if $.Values.nodeSelector }}
+      nodeSelector: {{ toYaml $.Values.nodeSelector | nindent 8 }}
+      {{- end }}
       volumes:
         - name: data
           {{- if .persistence.enabled }}
