--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,10 +11,10 @@ jobs:
         uses: actions/checkout@v2
       - name: build
         run: |
-          docker-compose build
+          docker compose build
       - name: Test API
         run: |
-          docker-compose run --rm -e APP_ENV=dev api /bin/ash -c 'composer install && composer test'
+          docker compose run --rm -e APP_ENV=dev api /bin/ash -c 'composer install && composer test'
 
       - name: Test HELM
         run: |
@@ -34,7 +34,7 @@ jobs:
       - name: Push images
         if: github.ref == 'refs/heads/main'
         run: |
-          docker-compose push
+          docker compose push
 
       - name: Publish Helm charts
         if: github.ref == 'refs/heads/main'
