--- a/api/composer.json
+++ b/api/composer.json
@@ -45,7 +45,8 @@
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.18"
+        "friendsofphp/php-cs-fixer": "^2.18",
+        "phpunit/phpunit": "8.5.0"
     },
     "config": {
         "optimize-autoloader": true,
