--- a/api/composer.json
+++ b/api/composer.json
@@ -34,7 +34,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
         "symfony/monolog-bundle": "^3.7",
-        "symfony/phpunit-bridge": "^5.2",
+        "symfony/phpunit-bridge": "^7.2",
         "symfony/property-access": "5.2.*",
         "symfony/property-info": "5.2.*",
         "symfony/proxy-manager-bridge": "5.2.*",
@@ -45,8 +45,7 @@
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.18",
-        "phpunit/phpunit": "8.5.0"
+        "friendsofphp/php-cs-fixer": "^2.18"
     },
     "config": {
         "optimize-autoloader": true,
@@ -69,19 +68,6 @@
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
         "symfony/polyfill-php72": "*"
-    },
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ],
-        "test": "unset DATA_DIR DATABASE_URL && rm -f tests/data/test.db && bin/console doctrine:schema:create -e test && ./bin/phpunit"
     },
     "conflict": {
         "symfony/symfony": "*"
