--- a/infra/helm/zippy/templates/rabbitmq-job-vhost.yaml
+++ b/infra/helm/zippy/templates/rabbitmq-job-vhost.yaml
@@ -6,7 +6,7 @@ kind: Job
 metadata:
   name: {{ include "zippy.fullname" $ }}-{{ $jobName }}
   annotations:
-    "helm.sh/hook": post-install
+    "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 spec:
   template:
