--- a/api/.env
+++ b/api/.env
@@ -41,3 +41,10 @@ VERIFY_SSL=true
 MAX_EXPIRATION_TIME=-1
 
 JWT_TTL=86400
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
