--- a/api/composer.json
+++ b/api/composer.json
@@ -6,53 +6,57 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.4",
+        "php": "^8.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
         "alchemy/zippy": "^1.0",
-        "api-platform/core": "v2.6.3",
-        "arthem/rabbit-bundle": "^0.2.2",
+        "api-platform/core": "^3.2.7",
         "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/annotations": "^1.0",
-        "doctrine/doctrine-bundle": "^2.3",
+        "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.1",
-        "doctrine/dbal": "^2.13",
-        "doctrine/orm": "^2.8",
-        "guzzlehttp/guzzle": "^7.3",
+        "doctrine/dbal": "^3.6",
+        "doctrine/orm": "^2.11",
+        "guzzlehttp/guzzle": "^7.9",
         "lcobucci/jwt": "^4.1",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
         "ramsey/uuid-doctrine": "^1.6",
         "stof/doctrine-extensions-bundle": "^1.6",
-        "symfony/asset": "5.2.*",
-        "symfony/browser-kit": "5.2.*",
-        "symfony/console": "5.2.*",
-        "symfony/css-selector": "5.2.*",
-        "symfony/dotenv": "5.2.*",
-        "symfony/expression-language": "5.2.*",
-        "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "5.2.*",
-        "symfony/monolog-bundle": "^3.7",
+        "symfony/asset": "6.4.*",
+        "symfony/browser-kit": "^6.3",
+        "symfony/console": "^6.3",
+        "symfony/css-selector": "7.2.*",
+        "symfony/dotenv": "^6.3",
+        "symfony/expression-language": "^6.3",
+        "symfony/flex": "^2.5",
+        "symfony/framework-bundle": "^6.3",
+        "symfony/monolog-bundle": "^3.10",
+        "symfony/messenger": "^6.3",
         "symfony/phpunit-bridge": "^7.2",
-        "symfony/property-access": "5.2.*",
-        "symfony/property-info": "5.2.*",
-        "symfony/proxy-manager-bridge": "5.2.*",
-        "symfony/security-bundle": "5.2.*",
-        "symfony/serializer": "5.2.*",
-        "symfony/twig-bundle": "5.2.*",
-        "symfony/validator": "5.2.*",
-        "symfony/yaml": "5.2.*"
+        "symfony/property-access": "^6.3",
+        "symfony/property-info": "^6.3",
+        "symfony/proxy-manager-bridge": "^6.3",
+        "symfony/security-bundle": "^6.3",
+        "symfony/serializer": "^6.3",
+        "symfony/twig-bundle": "^6.3",
+        "symfony/validator": "^6.3",
+        "symfony/yaml": "^6.3"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.18"
+        "friendsofphp/php-cs-fixer": "^3.17",
+        "phpunit/phpunit": "^12.1.4"
     },
     "config": {
         "optimize-autoloader": true,
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/flex": true
+        }
     },
     "autoload": {
         "psr-4": {
