--- a/api/composer.json
+++ b/api/composer.json
@@ -24,6 +24,7 @@
         "phpdocumentor/reflection-docblock": "^5.2",
         "ramsey/uuid-doctrine": "^1.6",
         "stof/doctrine-extensions-bundle": "^1.6",
+        "symfony/amqp-messenger": "^6.3",
         "symfony/asset": "6.4.*",
         "symfony/browser-kit": "^6.3",
         "symfony/console": "^6.3",
