--- a/api/docker/caching/composer.json
+++ b/api/docker/caching/composer.json
@@ -12,7 +12,6 @@
         "ext-json": "*",
         "alchemy/zippy": "^1.0",
         "api-platform/core": "^3.2.7",
-        "arthem/rabbit-bundle": "^0.3",
         "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.9",
@@ -25,6 +24,7 @@
         "phpdocumentor/reflection-docblock": "^5.2",
         "ramsey/uuid-doctrine": "^1.6",
         "stof/doctrine-extensions-bundle": "^1.6",
+        "symfony/amqp-messenger": "^6.3",
         "symfony/asset": "6.4.*",
         "symfony/browser-kit": "^6.3",
         "symfony/console": "^6.3",
@@ -34,6 +34,7 @@
         "symfony/flex": "^2.5",
         "symfony/framework-bundle": "^6.3",
         "symfony/monolog-bundle": "^3.10",
+        "symfony/messenger": "^6.3",
         "symfony/phpunit-bridge": "^7.2",
         "symfony/property-access": "^6.3",
         "symfony/property-info": "^6.3",
@@ -45,7 +46,8 @@
         "symfony/yaml": "^6.3"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.17"
+        "friendsofphp/php-cs-fixer": "^3.17",
+        "phpunit/phpunit": "^12.1.4"
     },
     "config": {
         "optimize-autoloader": true,
