--- a/api/config/packages/messenger.yaml
+++ b/api/config/packages/messenger.yaml
@@ -23,3 +23,16 @@ framework:
 #                # replace with your transport name here (e.g., my_transport: 'in-memory://')
 #                # For more Messenger testing tools, see https://github.com/zenstruck/messenger-test
 #                async: 'in-memory://'
+
+
+when@dev:
+    framework:
+        messenger:
+            transports:
+                async: 'sync://'
+
+when@test:
+    framework:
+        messenger:
+            transports:
+                async: 'test://'
