--- a/api/composer.json
+++ b/api/composer.json
@@ -47,7 +47,9 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.17",
-        "phpunit/phpunit": "^12.1.4"
+        "phpunit/phpunit": "^12.1.4",
+        "symfony/browser-kit": "^6.3",
+        "symfony/http-client": "^6.3"
     },
     "config": {
         "optimize-autoloader": true,
