--- a/api/config/packages/messenger.yaml
+++ b/api/config/packages/messenger.yaml
@@ -35,4 +35,4 @@ when@test:
     framework:
         messenger:
             transports:
-                async: 'test://'
+                async: 'in-memory://'
