--- a/api/config/packages/messenger.yaml
+++ b/api/config/packages/messenger.yaml
@@ -26,4 +26,4 @@ when@test:
     framework:
         messenger:
             transports:
-                async: 'in-memory://'
+                async: 'sync://'
