--- a/api/config/packages/doctrine.yaml
+++ b/api/config/packages/doctrine.yaml
@@ -10,13 +10,7 @@ doctrine:
         mappings:
             App:
                 is_bundle: false
-                type: attribute
+                type: annotation
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
-
-when@test:
-    doctrine:
-        dbal:
-            driver: 'sqlite'
-            url: '%env(resolve:DATABASE_URL)%'      
