--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -10,11 +10,13 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            anonymous: true
             stateless: true
             lazy: true
             provider: users_in_memory
-            custom_authenticators:
-                - App\Security\ApiClientAuthenticator
+            guard:
+                authenticators:
+                    - App\Security\ApiClientAuthenticator
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
